--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -84,9 +84,11 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="35dp"
                 android:layout_marginEnd="30dp"
+                android:layout_marginBottom="20dp"
                 android:background="@color/white"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView5">
